[fix]#8130 align button download file in workspace

--- a/css/modules.less
+++ b/css/modules.less
@@ -3605,6 +3605,9 @@ recorder{
 		.invert-colors();
 	}
 }
+file-viewer .file .default-viewer button {
+    float: none;
+}
 
 .skins-picker{
 	.photo-preview{
